force-app/main/default/objects/Lead/fields/Aggregator_First_Seen_Date__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_First_Seen_Date__c</fullName>
    <label>Aggregator First Seen Date</label>
    <type>Date</type>
</CustomField>