force-app/main/default/objects/Lead/fields/Current_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Current_Carrier__c</fullName>
    <label>Current Carrier</label>
    <type>Text</type>
    <length>100</length>
</CustomField>