force-app/main/default/objects/Lead/fields/Current_Premium_Annual__c.field-meta.xml
<CustomField>
    <fullName>Current_Premium_Annual__c</fullName>
    <label>Current Annual Premium</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>