force-app/main/default/objects/Lead/fields/Data_Cloud_Bind_Rate__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Bind_Rate__c</fullName>
    <label>Data Cloud: Source Bind Rate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>