force-app/main/default/objects/Lead/fields/Data_Cloud_Cost_Of_Pursuit__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Cost_Of_Pursuit__c</fullName>
    <label>Data Cloud: Cost of Pursuit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>