force-app/main/default/objects/Lead/fields/Data_Cloud_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Existing_Customer__c</fullName>
    <label>Data Cloud: Existing Customer Match</label>
    <length>100</length>
    <type>Text</type>
</CustomField>