force-app/main/default/objects/Lead/fields/Data_Cloud_Expected_Margin__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Expected_Margin__c</fullName>
    <label>Data Cloud: Expected Margin</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>