force-app/main/default/objects/Lead/fields/Data_Cloud_Producer_Of_Record__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Producer_Of_Record__c</fullName>
    <label>Data Cloud: Producer of Record</label>
    <length>100</length>
    <type>Text</type>
</CustomField>