force-app/main/default/objects/Lead/fields/Data_Cloud_Suppression_Flag__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Suppression_Flag__c</fullName>
    <label>Data Cloud: Suppression Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>