force-app/main/default/objects/Lead/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Mobile</fullName><default>false</default></value>
            <value><fullName>Desktop</fullName><default>false</default></value>
            <value><fullName>Tablet</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>