force-app/main/default/objects/Lead/fields/Driving_Record_Flag__c.field-meta.xml
<CustomField>
    <fullName>Driving_Record_Flag__c</fullName>
    <label>Driving Record Flag</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>