force-app/main/default/objects/Lead/fields/Form_Fill_Speed_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Form_Fill_Speed_Percentile__c</fullName>
    <label>Form Fill Speed Percentile</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>