force-app/main/default/objects/Lead/fields/Household_Account__c.field-meta.xml
<CustomField>
    <fullName>Household_Account__c</fullName>
    <description>Data Cloud-enriched household account</description>
    <label>Household Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>