force-app/main/default/objects/Lead/fields/Household_Summary__c.field-meta.xml
<CustomField>
    <fullName>Household_Summary__c</fullName>
    <description>Summary of household information from Data Cloud enrichment</description>
    <label>Household Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>