force-app/main/default/objects/Lead/fields/IP_Address_Match__c.field-meta.xml
<CustomField>
    <fullName>IP_Address_Match__c</fullName>
    <label>IP Address Multi-Submit Match</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>