force-app/main/default/objects/Lead/fields/Is_Producer_Of_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Producer_Of_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if this lead has a Producer of Record (POR) assigned</description>
    <label>Is Producer Of Record</label>
    <type>Checkbox</type>
</CustomField>