force-app/main/default/objects/Lead/fields/Loop1_Act_Snapshot_Id__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Act_Snapshot_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Lead Act Snapshot that produced this classification.</description>
    <label>Classification Loop: Act Snapshot</label>
    <referenceTo>Lead_Act_Snapshot__c</referenceTo>
    <relationshipLabel>Leads (Loop 1 Decision)</relationshipLabel>
    <relationshipName>Leads_With_This_Decision</relationshipName>
    <type>Lookup</type>
</CustomField>