force-app/main/default/objects/Lead/fields/Loop1_Classifier_Version__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Classifier_Version__c</fullName>
    <description>The Lead Classifier Model Version that produced this classification.</description>
    <label>Classification Loop: Classifier Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>