force-app/main/default/objects/Lead/fields/Loop1_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Confidence__c</fullName>
    <label>Loop 1: Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>