force-app/main/default/objects/Lead/fields/Loop1_Decided_At__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Decided_At__c</fullName>
    <label>Loop 1: Decided At</label>
    <type>DateTime</type>
</CustomField>