force-app/main/default/objects/Lead/fields/Loop1_Decision_Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Decision_Policy_Version__c</fullName>
    <description>The Lead Classifier Decision Policy Version that produced this classification.</description>
    <label>Classification Loop: Policy Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>