force-app/main/default/objects/Lead/fields/Loop1_Manual_Review__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Manual_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the Classifier pivoted to manual review (per-decision pivot criterion).</description>
    <label>Classification Loop: Manual Review</label>
    <type>Checkbox</type>
</CustomField>