force-app/main/default/objects/Lead/fields/Loop1_Margin__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Margin__c</fullName>
    <label>Classification Loop: Margin</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>