force-app/main/default/objects/Lead/fields/Loop1_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Model_Version__c</fullName>
    <label>Loop 1: Model Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>