force-app/main/default/objects/Lead/fields/Loop1_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Outcome__c</fullName>
    <label>Loop 1: Outcome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>