force-app/main/default/objects/Lead/fields/Loop1_Predicted_Window__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Predicted_Window__c</fullName>
    <label>Classification Loop: Predicted Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Next 7 Days</fullName>
            </value>
            <value>
                <fullName>Next 30 Days</fullName>
            </value>
            <value>
                <fullName>30-90 days</fullName>
                <isActive>false</isActive>
                <label>30-90 days</label>
            </value>
            <value>
                <fullName>Extended</fullName>
                <isActive>false</isActive>
                <label>Extended</label>
            </value>
            <value>
                <fullName>Indefinite</fullName>
                <isActive>false</isActive>
                <label>Indefinite</label>
            </value>
            <value>
                <fullName>Long</fullName>
                <isActive>false</isActive>
                <label>Long</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>No Window</fullName>
                <isActive>false</isActive>
                <label>No Window</label>
            </value>
            <value>
                <fullName>Short</fullName>
                <isActive>false</isActive>
                <label>Short</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>