force-app/main/default/objects/Lead/fields/Loop1_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Reason__c</fullName>
    <label>Loop 1: Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>