force-app/main/default/objects/Lead/fields/Loop1_Status__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Status__c</fullName>
    <label>Classification Loop: Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Classified</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>