force-app/main/default/objects/Lead/fields/Loop1_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Verdict__c</fullName>
    <label>Loop 1: Verdict</label>
    <length>100</length>
    <type>Text</type>
</CustomField>