force-app/main/default/objects/Lead/fields/Loop2_Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Loop2_Assigned_Agent__c</fullName>
    <label>Loop2 Assigned Agent</label>
    <type>Lookup</type>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>