force-app/main/default/objects/Lead/fields/Loop2_Destination_Type__c.field-meta.xml
<CustomField>
    <fullName>Loop2_Destination_Type__c</fullName>
    <label>Loop2 Destination Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Agent</fullName><default>false</default></value>
            <value><fullName>Queue</fullName><default>false</default></value>
            <value><fullName>Overflow</fullName><default>false</default></value>
            <value><fullName>None</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>