force-app/main/default/objects/Lead/fields/Loop2_Nurture_Category__c.field-meta.xml
<CustomField>
    <fullName>Loop2_Nurture_Category__c</fullName>
    <label>Loop2 Nurture Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Immediate</fullName><default>false</default></value>
            <value><fullName>Short_Window</fullName><default>false</default></value>
            <value><fullName>Medium_Window</fullName><default>false</default></value>
            <value><fullName>Long_Window</fullName><default>false</default></value>
            <value><fullName>Extended</fullName><default>false</default></value>
            <value><fullName>Indefinite</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>