force-app/main/default/objects/Lead/fields/Loop2_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Loop2_Outcome__c</fullName>
    <label>Loop2 Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>pending</fullName><default>true</default></value>
            <value><fullName>bound</fullName><default>false</default></value>
            <value><fullName>lost</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>