force-app/main/default/objects/Lead/fields/Loop2_Routed_Date__c.field-meta.xml
<CustomField>
    <fullName>Loop2_Routed_Date__c</fullName>
    <label>Loop2 Routed Date</label>
    <type>DateTime</type>
</CustomField>