force-app/main/default/objects/Lead/fields/Loop2_Routed_Queue__c.field-meta.xml
<CustomField>
    <fullName>Loop2_Routed_Queue__c</fullName>
    <label>Loop2 Routed Queue</label>
    <type>Text</type>
    <length>80</length>
</CustomField>