force-app/main/default/objects/Lead/fields/Loop2_Routing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loop2_Routing_Reason__c</fullName>
    <label>Loop2 Routing Reason</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>