force-app/main/default/objects/Lead/fields/POR_Agent__c.field-meta.xml
<CustomField>
    <fullName>POR_Agent__c</fullName>
    <label>POR Agent</label>
    <type>Lookup</type>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>POR Leads</relationshipLabel>
    <relationshipName>POR_Leads</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>