force-app/main/default/objects/Lead/fields/POR_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>POR_Agent_Name__c</fullName>
    <label>POR Agent Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>