force-app/main/default/objects/Lead/fields/Prior_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Prior_Carrier__c</fullName>
    <label>Prior Carrier</label>
    <type>Text</type>
    <length>100</length>
</CustomField>