force-app/main/default/objects/Lead/fields/Prior_Claims_Count__c.field-meta.xml
<CustomField>
    <fullName>Prior_Claims_Count__c</fullName>
    <label>Prior Claims Count (5yr)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>