force-app/main/default/objects/Lead/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Single Family</fullName><default>false</default></value>
            <value><fullName>Condo</fullName><default>false</default></value>
            <value><fullName>Townhome</fullName><default>false</default></value>
            <value><fullName>Multi-Family</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>