force-app/main/default/objects/Lead/fields/Property_Value_Est__c.field-meta.xml
<CustomField>
    <fullName>Property_Value_Est__c</fullName>
    <label>Estimated Property Value</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>