force-app/main/default/objects/Lead/fields/Quote_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Requested_Date__c</fullName>
    <label>Quote Requested Date</label>
    <type>DateTime</type>
</CustomField>