force-app/main/default/objects/Lead/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <label>Policy Renewal Date</label>
    <type>Date</type>
</CustomField>