force-app/main/default/objects/Lead/fields/Spouse_Auto_Policy__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Auto_Policy__c</fullName>
    <label>Spouse Auto Policy Number</label>
    <type>Text</type>
    <length>50</length>
</CustomField>