force-app/main/default/objects/Lead/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <label>Spouse Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>