force-app/main/default/objects/Lead/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <type>Text</type>
    <length>50</length>
</CustomField>