force-app/main/default/objects/Lead/fields/Vehicle_VIN_Last6__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_VIN_Last6__c</fullName>
    <label>VIN Last 6</label>
    <type>Text</type>
    <length>6</length>
</CustomField>