force-app/main/default/objects/Lead/fields/Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Year__c</fullName>
    <label>Vehicle Year</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>