force-app/main/default/objects/Lead/fields/Years_With_Current_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Years_With_Current_Carrier__c</fullName>
    <label>Years With Current Carrier</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>